examples/test/testpolicy15315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15315
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key38: value45
      key32: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value32
      podSelector:
        matchLabels:
          key32: value34
          key33: value41
          key21: value30
